--- a/prototool.yaml
+++ b/prototool.yaml
@@ -43,3 +43,9 @@ lint:
       - peer/proposal.proto
       - peer/transaction.proto
       - token/operations.proto
+    - id: FILE_HEADER
+      files:
+        - google
+    - id: FILE_OPTIONS_GO_PACKAGE_NOT_LONG_FORM
+      files:
+        - google
